CUSTOM: Show also 'Abstains' for invalid votes in result table.
Only for yes-votes on assignment poll slide and assignment detail view.

--- a/openslides/assignments/static/templates/assignments/assignment-detail.html
+++ b/openslides/assignments/static/templates/assignments/assignment-detail.html
@@ -258,6 +258,7 @@
             <tr>
               <td>
                 <translate>Invalid ballots</translate>
+                <span ng-if="poll.pollmethod == 'votes'">/ <translate>Abstains</translate></span>
               <td>
                 {{ poll.getVote('votesinvalid').value }}
                 {{ poll.getVote('votesinvalid').percentStr }}
