--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
@@ -282,12 +282,17 @@
                 </span>
             </os-extension-field>
             <!-- custom -->
-            <p *ngIf="perms.isAllowed('change_state', motion) && motion.state.name === 'in Bearbeitung'">
+            <p *ngIf="perms.isAllowed('change_state', motion) && (motion.state.name === 'Entwurf' || motion.state.name === 'in Bearbeitung')" >
                 <span *ngFor="let state of motion.state.next_states">
                     <button
                         *ngIf="state.name === 'gestellt'"
                         mat-stroked-button (click)="setState(state.id)">
                         Antrag stellen
+                    </button>
+                    <button
+                        *ngIf="state.name === 'eingereicht'"
+                        mat-stroked-button (click)="setState(state.id)">
+                        Antrag einreichen
                     </button>
                 </span>
             </p>
