--- a/openslides/core/static/css/projector.css
+++ b/openslides/core/static/css/projector.css
@@ -1,38 +1,40 @@
 /*
  * Font definitions for OpenSlides projector
+ * Custom: Titillium fonts
  */
-
 @font-face {
-  font-family: 'Roboto Condensed';
-  src: url('../fonts/Roboto-Condensed-Regular.woff') format('woff');
-  font-weight: 100;
-  font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto Condensed Light';
-    src: url('../fonts/Roboto-Condensed-Light.woff') format('woff');
+    font-family: 'Titillium';
+    src: url('../fonts/TitilliumWeb-Regular.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
+    font-family: 'Titillium-Bold';
+    src: url('../fonts/TitilliumWeb-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Titillium-Italic';
+    src: url('../fonts/TitilliumWeb-Italic.ttf') format('truetype');
+    font-style: italic;
+}
+body, #header, #currentTime, #footer, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Titillium' !important;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Titillium", sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
 }
 h1, h2, h3, h4, h5, h6, .countdown, .message {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Titillium-Bold", sans-serif;
     font-weight: normal;
 }
 #header, #currentTime, #footer {
-    font-family: 'Roboto Condensed Light';
+    font-family: 'Titillium';
 }
 
 /*
