CUSTOM: Adapt layout for list of speakers slides.

--- a/openslides/agenda/static/css/agenda/_list_of_speakers.scss
+++ b/openslides/agenda/static/css/agenda/_list_of_speakers.scss
@@ -13,7 +13,8 @@
 }
 
 .nextSpeakers {
-    margin-left: 13px;
+    margin-left: -11px;
+    list-style-type: none;
 
     li {
         line-height: 150%;
