--- a/openslides/users/static/templates/users/user-import.html
+++ b/openslides/users/static/templates/users/user-import.html
@@ -51,7 +51,7 @@
           <translate>Given name</translate>,
           <translate>Surname</translate>,
           <translate>Structure level</translate>,
-          <translate>Participant number</translate>,
+          <translate>Delegiertennummer</translate>,
           <translate>Groups</translate>,
           <translate>Comment</translate>,
           <translate>Is active</translate>,
@@ -84,7 +84,7 @@
             <th translate>Given name
             <th translate>Surname
             <th translate>Structure level
-            <th translate>Participant number
+            <th translate>Delegiertennummer
             <th translate>Groups
             <th translate>Comment
             <th translate>Is active
