CUSTOM LAEKH: Show supporters ('Mitantragsteller/innen') for motion pdf and slide.

--- a/openslides/core/static/css/projector.css
+++ b/openslides/core/static/css/projector.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
 }
 h1, h2, h3, h4, h5, h6, .countdown, .message {
-    font-family: "Titillium-Bold", sans-serif;
+    font-family: "Titillium-Bold", sans-serif !important;
     font-weight: normal;
 }
 #header, #currentTime, #footer {
