--- a/openslides/core/static/css/_variables.scss
+++ b/openslides/core/static/css/_variables.scss
@@ -1,10 +1,10 @@
 /** Fonts **/
 /* Note: The font naming has to be consistent to the projector.html */
-$font: 'OSFont';
-$font-src: url('../fonts/Roboto-Regular.woff') format('woff');
-$font-medium: 'OSFont Medium';
-$font-medium-src: url('../fonts/Roboto-Medium.woff') format('woff');
-$font-condensed: 'OSFont Condensed';
-$font-condensed-src: url('../fonts/Roboto-Condensed-Regular.woff') format('woff');
-$font-condensed-light: 'OSFont Condensed Light';
-$font-condensed-light-src: url('../fonts/Roboto-Condensed-Light.woff') format('woff');
+$font: 'PT Sans';
+$font-src: url('../fonts/ptsans_regular.woff') format('woff');
+$font-medium: 'PT Sans Bold';
+$font-medium-src: url('../fonts/ptsans_bold.woff') format('woff');
+$font-condensed: 'Arvo Regular';
+$font-condensed-src: url('../fonts/arvo_regular.woff') format('woff');
+$font-condensed-light: 'Arvo Regular Light';
+$font-condensed-light-src: url('../fonts/arvo_regular.woff') format('woff');
