--- a/openslides/core/static/css/core/_site.scss
+++ b/openslides/core/static/css/core/_site.scss
@@ -48,14 +48,19 @@ blockquote {
     font-size: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
     line-height: 1.1;
     font-family: $font-condensed, sans-serif;
     font-weight: 400;
 }
+h2, h3, h4, h5, h6 {
+    line-height: 1.1;
+    font-family: $font, sans-serif;
+    font-weight: 400;
+}
 
 h1 {
-    font-size: 36px;
+    font-size: 32px;
     color: #317796;
     padding-bottom: 8px;
 }
@@ -281,7 +286,7 @@ strong, b, th {
 
     .meta {
         .heading, h3 {
-            font-family: $font-condensed-light;
+            font-family: $font;
             font-size: 22px;
             line-height: 24px;
             font-weight: 300;
@@ -322,7 +327,7 @@ strong, b, th {
         }
 
         .heading .drop-down-name {
-            font-family: $font-condensed-light;
+            font-family: $font;
         }
     }
 
@@ -372,7 +377,7 @@ strong, b, th {
         font-size: 20px;
         line-height: 24px;
         color: #444;
-        font-family: $font-condensed-light;
+        font-family: $font;
         font-weight: 300;
     }
 
