--- a/openslides/core/static/templates/index.html
+++ b/openslides/core/static/templates/index.html
@@ -31,6 +31,7 @@
       <a ui-sref="home">
         <img src="/static/img/openslides-logo-dark.png" alt="OpenSlides Logo" height="35">
         <img ng-if="config('logo_web_header').path" ng-src="{{ config('logo_web_header').path }}" alt="OpenSlides Logo" height="35">
+        <span class="logoaddon">GRÜN</span>
       </a>
       <span ng-bind-html="config('general_event_name')"></span>
     </div>
