CUSTOM: Added 'please wait' message to spinner index view.

--- a/openslides/core/static/templates/index.html
+++ b/openslides/core/static/templates/index.html
@@ -19,7 +19,10 @@
 
 <!-- please wait -->
 <div id="spinner-container" ng-if="!openslidesBootstrapDone">
-  <div><i class="fa fa-spinner fa-pulse"></i></div>
+  <div>
+    <i class="fa fa-spinner fa-pulse"></i>
+    <p>Daten werden geladen. Bitte warten...</p>
+  </div>
 </div>
 <div id="startup-overlay" ng-if="!openslidesBootstrapDone"></div>
 
