--- a/openslides/core/static/css/_startup-spinner.scss
+++ b/openslides/core/static/css/_startup-spinner.scss
@@ -31,4 +31,8 @@
         text-align: center;
         color: #317796;
     }
+    p {
+        font-size: 18px;
+        margin-top:10px;
+    }
 }
