CUSTOM: new amendment table pdf export

--- a/openslides/motions/static/templates/motions/motion-amendment-list.html
+++ b/openslides/motions/static/templates/motions/motion-amendment-list.html
@@ -89,6 +89,13 @@
               PDF
             </a>
           </li>
+          <!-- amendment table PDF export -->
+          <li>
+            <a href="" ng-click="amendmentTablePdfExport(amendmentsFiltered)">
+              <i class="fa fa-file-pdf-o"></i>
+              <translate>Amendment table PDF</translate>
+            </a>
+          </li>
           <!-- amendment PDF export -->
           <li>
             <a href="" ng-click="amendmentPdfExport(amendmentsFiltered)">
