CUSTOM: Improved amendment table layout

--- a/openslides/motions/static/templates/motions/motion-amendment-list.html
+++ b/openslides/motions/static/templates/motions/motion-amendment-list.html
@@ -93,14 +93,14 @@
           <li>
             <a href="" ng-click="amendmentTablePdfExport(amendmentsFiltered)">
               <i class="fa fa-file-pdf-o"></i>
-              <translate>Amendment table PDF</translate>
+              <translate>Änderungsantragstabelle (PDF)</translate>
             </a>
           </li>
           <!-- amendment PDF export -->
           <li>
             <a href="" ng-click="amendmentPdfExport(amendmentsFiltered)">
               <i class="fa fa-file-pdf-o"></i>
-              <translate>Amendment list PDF</translate>
+              <translate>Änderungsantragsreader (PDF)</translate>
             </a>
           </li>
           <!-- CSV export -->
