CUSTOM: use min_supporters feature for >=0; -1 to deactivate it

--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
@@ -210,7 +210,7 @@
         </div>
 
         <!-- do Support -->
-        <div *ngIf="minSupporters && !editMotion">
+        <div *ngIf="minSupporters >= 0 && !editMotion">
             <h4 *ngIf="perms.isAllowed('support', motion) || motion.hasSupporters()">{{ 'Supporters' | translate }}</h4>
 
             <!-- support button -->
