--- a/client/src/app/site/polls/components/poll-progress/poll-progress.component.html
+++ b/client/src/app/site/polls/components/poll-progress/poll-progress.component.html
@@ -1,3 +1,3 @@
-<span> {{ 'Casted votes' }}: {{ poll.voted_id.length }} / {{ max }} </span>
+<span> {{ 'Casted votes' | translate }}: {{ poll.voted_id.length }} / {{ max }} </span>
 
 <mat-progress-bar class="voting-progress-bar" [value]="valueInPercent"></mat-progress-bar>
