--- a/client/src/app/site/users/components/user-list/user-list.component.html
+++ b/client/src/app/site/users/components/user-list/user-list.component.html
@@ -30,10 +30,13 @@
     (dataSourceChange)="onDataSourceChange($event)"
 >
     <!-- Name column -->
-    <div *pblNgridCellDef="'short_name'; value as name; row as user; rowContext as rowContext" class="cell-slot fill">
+    <div *pblNgridCellDef="'short_name'; row as user; rowContext as rowContext" class="cell-slot fill">
         <a class="detail-link" [routerLink]="user.id" *ngIf="!isMultiSelect"></a>
-        <div class="nameCell">
-            <span>{{ name }}</span>
+        <div class="innerTable">
+            <div>{{ user.short_name }}</div>
+            <div class="user-subtitle" *ngIf="isElectronicVotingEnabled">
+                {{ 'Vote weight' | translate }}: {{ user.vote_weight }}
+            </div>
         </div>
         <div class="icon-group">
             <mat-icon matTooltip="{{ 'Is committee' | translate }}" *ngIf="user.is_committee">account_balance</mat-icon>
