Integrate jitsi-meet in OpenSlides
- minimal jitsi client in the bottom right of the screen
- can be shown and hidden like a messenger
- allows to mute, unmute, call, stop call
- automatically connects to a conference
- shows a list of users connected to the room
- jitsi iframe is currently hidden
- "open in jitsi meet" link
- only one connection will be opened if using multiple tabs
- JITSI_DOMAIN and JITSI_ROOM_NAME must be present in the settings.py
- config variables in settings

--- a/client/src/app/shared/components/list-view-table/list-view-table.component.scss
+++ b/client/src/app/shared/components/list-view-table/list-view-table.component.scss
@@ -10,6 +10,11 @@ $pbl-height: var(--pbl-height);
     height: $pbl-height;
 }
 
+// additional space if the jitsi integration is active
+.pbl-ngrid-row:last-of-type {
+    margin-bottom: 30px !important;
+}
+
 .pbl-ngrid-cell {
     height: inherit;
 }
