--- a/client/src/app/site/projector/components/projector-detail/projector-detail.component.html
+++ b/client/src/app/site/projector/components/projector-detail/projector-detail.component.html
@@ -41,7 +41,7 @@
 <os-grid-layout *ngIf="projector">
     <os-tile [preferredSize]="projectorTileSizeLeft">
         <div *ngIf="projector" class="projector-detail-wrapper column-left">
-            <a [routerLink]="['/projector', projector.id]">
+            <a [routerLink]="['/projector', projector.id]" target="_blank">
                 <div id="projector">
                     <os-projector [projector]="projector"></os-projector>
                 </div>
