--- a/client/src/app/site/site.component.html
+++ b/client/src/app/site/site.component.html
@@ -89,6 +89,7 @@
                 <mat-icon>arrow_forward_ios</mat-icon>
             </button>
         </div>
+        <os-jitsi></os-jitsi>
         <div (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')" class="content">
             <main>
                 <router-outlet #o="outlet"></router-outlet>
