--- a/client/src/app/site/motions/modules/motion-poll/motion-poll-vote/motion-poll-vote.component.scss
+++ b/client/src/app/site/motions/modules/motion-poll/motion-poll-vote/motion-poll-vote.component.scss
@@ -8,6 +8,13 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
+.submit-vote-indicator {
+    text-align: center;
+    .mat-spinner {
+        margin: auto;
+    }
+}
+
 .vote-button {
     display: inline-grid;
     grid-gap: 1em;
