--- a/client/src/app/site/assignments/components/assignment-poll-vote/assignment-poll-vote.component.html
+++ b/client/src/app/site/assignments/components/assignment-poll-vote/assignment-poll-vote.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="poll">
-    <ng-container *ngIf="vmanager.canVote(poll) && !alreadyVoted; else cannotVote">
+    <ng-container *ngIf="vmanager.canVote(poll) && !alreadyVoted && !deliveringVote; else cannotVote">
         <!-- Poll hint -->
         <p *ngIf="pollHint">
             <i>{{ pollHint }}</i>
@@ -9,9 +9,7 @@
         <h4 *ngIf="poll.pollmethod === AssignmentPollMethod.Votes && poll.votes_amount > 1">
             {{ 'Available votes' | translate }}:
 
-            <b>
-                {{ getVotesAvailable() }}/{{ poll.votes_amount }}
-            </b>
+            <b> {{ getVotesAvailable() }}/{{ poll.votes_amount }} </b>
         </h4>
 
         <!-- Options and Actions -->
@@ -103,12 +101,18 @@
 
 <ng-template #cannotVote>
     <div class="centered-button-wrapper">
-        <div>
+        <div *ngIf="!deliveringVote">
             <mat-icon class="vote-submitted">
                 check_circle
             </mat-icon>
             <br />
             <span>{{ 'Voting successful.' | translate }}</span>
+        </div>
+
+        <div *ngIf="deliveringVote">
+            <mat-spinner></mat-spinner>
+            <br />
+            <span> {{ 'Delivering vote' | translate }}</span>
         </div>
     </div>
 </ng-template>
