--- a/client/src/app/site/assignments/components/assignment-poll/assignment-poll.component.html
+++ b/client/src/app/site/assignments/components/assignment-poll/assignment-poll.component.html
@@ -42,6 +42,7 @@
                     mat-stroked-button
                     [ngClass]="pollStateActions[poll.state].css"
                     (click)="changeState(poll.nextState)"
+                    [disabled]="stateChangePending"
                 >
                     <mat-icon> {{ pollStateActions[poll.state].icon }}</mat-icon>
                     <span class="next-state-label">
