--- a/client/src/app/site/motions/modules/motion-poll/motion-poll/motion-poll.component.html
+++ b/client/src/app/site/motions/modules/motion-poll/motion-poll/motion-poll.component.html
@@ -42,7 +42,7 @@
 
     <!-- Change state button -->
     <div *osPerms="'motions.can_manage_polls'; and: !hideChangeState">
-        <button mat-stroked-button [ngClass]="pollStateActions[poll.state].css" (click)="changeState(poll.nextState)">
+        <button mat-stroked-button [ngClass]="pollStateActions[poll.state].css" (click)="changeState(poll.nextState)" [disabled]="stateChangePending">
             <mat-icon> {{ pollStateActions[poll.state].icon }}</mat-icon>
             <span class="next-state-label">
                 {{ poll.nextStateActionVerbose | translate }}
